--- a/templates/index.html
+++ b/templates/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Recomendação</title>
+    <title>Sistema de Recomendação - Trabalho Integração</title>
+    
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/logo.png') }}">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body { background-color: #f8f9fa; }
-        .card { margin-bottom: 20px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
-        .nav-link.active { background-color: #0d6efd !important; color: white !important; }
-    </style>
-</head>
-<body>
+    </head>
+<body> 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
   <div class="container">
-    <a class="navbar-brand" href="/">Integração BD</a>
+    <a class="navbar-brand" href="/">
+        <img src="{{ url_for('static', filename='img/logo.png')}}" alt="logo" height="40" class="d-inline-block" align-text-top>
+    Integração BD
+    </a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
@@ -24,7 +25,7 @@
         <li class="nav-item"><a class="nav-link" href="/consultas/compras">Histórico (Relacional)</a></li>
         <li class="nav-item"><a class="nav-link" href="/consultas/recomendacoes">Recomendações (Consolidado)</a></li>
       </ul>
-      <a href="/atualizar" class="btn btn-warning fw-bold">♻️ Sincronizar Bases</a>
+      <a href="/atualizar" class="btn btn-warning fw-bold">Sincronizar Bases</a>
     </div>
   </div>
 </nav>
